Bump from v1.14.0 to v1.14.2